Migrated some reusable computations to AudioProcessingUtils so that they can be initialized prior to any use of Heap (which might make them no longer usable when the Heap is destroyed - though this is actually supposed to be handled correctly anyway and just doesn't seem to be working). Updated PatternLayerManager so that the bias specifically for seeds can be scaled by a constant value. This capability is used by PatternSystemManager::refreshParameters to increase the bias when a smaller number of PatternLayerManager instances are active. Improvements to MixdownManager and removed DelayChromosome and WavCellChromosome.